# ASG_AILZ_CONTENTFLOW

./: .azdignore  .dockerignore  .gitignore  ASG_AILZ_Architecture.drawio  ASG_AILZ_ContentFlow_Handover.md  ASG_IMPLEMENTATION_NOTES.md  README.md  Validation Output Observations Report (1).docx  azure.yaml
contentflow-lib/: .gitignore  CustomExecutor.md  README.md  __init__.py  executor_catalog.yaml  pyproject.toml  requirements.txt  setup.sh
contentflow-lib/contentflow/: __init__.py
contentflow-lib/contentflow/connectors/: __init__.py  ai_search_connector.py  azure_blob_connector.py  base.py  content_understanding_connector.py  cosmos_gremlin_connector.py  cosmos_nosql_connector.py  document_intelligence_connector.py
contentflow-lib/contentflow/executors/: __init__.py  ai_search_index_output.py  api_callback_executor.py  api_fetch_executor.py  azure_blob_content_retriever.py  azure_blob_file_copy_executor.py  azure_blob_input_discovery.py  azure_blob_output_executor.py  azure_content_understanding_extractor.py  azure_document_intelligence_extractor.py  azure_openai_agent_executor.py  azure_openai_embeddings_executor.py  base.py  batch_aggregator.py  (+45 more)
contentflow-lib/samples/: .env.example  PARALLEL_WORKFLOWS_GUIDE.md  README.md  __init__.py  article_processing_subworkflow.yaml  batch_subworkflow_example.yaml  conditional_routing.py  conditional_routing.yaml  fan_out_fan_in.yaml  registros_validation_pipeline.yaml  setup_logger.py  split_merge.yaml  test_edge_workflow.py
contentflow-lib/tests/: test_cosmos_db_lookup_executor.py  test_csv_extractor.py
(+270 files in other folders)
